@@ -6,27 +6,23 @@ Nearest release 0.32 may hopefully include:
 1. Multi-post forms, suggested by Jeremy Hicks jehicks@novell.com
     http://curl.haxx.se/libcurl/c/curl_formadd.html
 
-2. HTTP GET filled forms for login credentials (they are sent using url).
-
-3. More testing of added HTTP PUT support, e.g. file upload. See put.conf
-
-4. Add a url-based tag QUIT_CYCLE_ON_ERROR to schedule or not to
+2. Add a url-based tag QUIT_CYCLE_ON_ERROR to schedule or not to
     schedule a client for more cycles, when an error condition detected.
    Now we have  such option as a global one, whereas URLs may have 
    different level of importance.
 
-5. ERROR_RESPONSE_CODES - add a list or codes considered
+3. ERROR_RESPONSE_CODES - add a list or codes considered
    as errors, or not considered as error conditions on a per-url bases. 
    By default all HTTP 5xx codes and 4xx -401-407 are considered as errors.
    Plus means add to a url errors list, where minus means remove from a
    url error list.
    Something like ERROR_RESPONSE_CODES="+100+101-500-503"
 
-6. Cookies - add an option to add a per-url cookie. Currently, we just enable any
+4. Cookies - add an option to add a per-url cookie. Currently, we just enable any
      cookies set by a server. Probably, users may wish to use a very specific
     and known in advance cookie.
 
-7. Add an option to limit throughput per client. Libcurl is already supporting it.
+5. Add an option to limit throughput per client. Libcurl is already supporting it.
 
 ---------------------------------------------------------------------------------------------------- 
 
