@@ -11,8 +11,7 @@ URLS_NUM= 1
 
 ########### URL SECTION ####################################
 
-URL="http://www.google.com/search
-#URL="http://www.google.com/search?hl=en&q=%22Robert+Iakobashvili%22&btnG=Google+Search"
+URL=http://www.google.com/search
 URL_SHORT_NAME="google-search"
 REQUEST_TYPE=GET
 FORM_USAGE_TYPE= AS_IS
